--- a/erdenkinder/static/style.css
+++ b/erdenkinder/static/style.css
@@ -39,3 +39,13 @@ div#rotation img {
     -moz-box-shadow: 1px 1px 2px 0 #666;
     -o-box-shadow: 1px 1px 2px 0 #666;
 }
+
+/* overrides */
+.navbar .nav > li > a {
+  color: #669129;
+}
+
+span.brand a, span.brand a:hover {
+  color: #669129;
+  font-weight: bold;
+}
